# otter

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
include/otter/: debug.h  tensor.h
include/otter/autograd/: no_grad_guard.h
include/otter/backends/: cpu.h  cuda.h
include/otter/core/: device.h  dtype.h  passkey.h  stream.h
include/otter/detail/: broadcast.h  cuda_runtime_mutex.h  debug_log.h  math_utils.h  stride_utils.h
include/otter/kernel/: backend.h  kernel_engine.h
include/otter/memory/: buffer.h  memory_manager.h
include/otter/ops/: add_operation.h  div_operation.h  exp_operation.h  log_operation.h  matmul_operation.h  mean_operation.h  mul_operation.h  neg_operation.h  operation.h  relu_operation.h  reshape_operation.h  slice_operation.h  sqrt_operation.h  sub_operation.h  sum_operation.h  transpose_operation.h
include/otter/optim/: optimizer.h  sgd.h
src/: CMakeLists.txt  backend.cpp  buffer.cpp  tensor.cpp
src/backends/: CMakeLists.txt  cpu_backend.cpp  cuda_backend.cpp  cuda_backend.h  cuda_stream.cpp  cuda_stream.h
src/core/: buffer.cpp  otter.cpp  tensor.cpp
src/core/autograd/: graph_executor.cpp  graph_executor.h
src/cpu/: CMakeLists.txt  cpu_backend.cpp
src/cpu/engine/: cpu_kernel_engine.cpp  cpu_kernel_engine.h
src/cpu/memory/: cpu_memory_manager.cpp  cpu_memory_manager.h
src/cuda/: CMakeLists.txt  cuda_backend.cpp  cuda_backend.h  cuda_check.h
src/cuda/engine/: cuda_kernel_engine.cu  cuda_kernel_engine.h  launch_spec.h  stream.cpp
src/cuda/internal/: functors.h  index_utils.h  kernel_templates.cuh
src/cuda/kernels/: binary.cu  copy.cu  fill.cu  inplace.cu  matmul.cu  reduce.cu  unary.cu
src/cuda/memory/: cuda_memory_manager.cpp  cuda_memory_manager.h
src/kernels/: CMakeLists.txt  cpu_kernel_engine.cpp  cpu_kernel_engine.h  cuda_binary.cu  cuda_copy.cu  cuda_fill.cu  cuda_index_utils.h  cuda_inplace.cu  cuda_kernel_engine.cpp  cuda_kernel_engine.cu  cuda_kernel_engine.h  cuda_kernel_templates.cuh  cuda_matmul.cu  cuda_reduce.cu  cuda_unary.cu  dispatcher.h
src/memory/: CMakeLists.txt  cpu_memory_manager.cpp  cpu_memory_manager.h  cuda_memory_manager.cpp  cuda_memory_manager.h
src/ops/: CMakeLists.txt  add_operation.cpp  broadcast_op.cpp  broadcast_op.h  div_operation.cpp  exp_operation.cpp  log_operation.cpp  matmul_operation.cpp  mean_operation.cpp  mul_operation.cpp  neg_operation.cpp  operation.cpp  relu_operation.cpp  reshape_operation.cpp  slice_operation.cpp  sqrt_operation.cpp  sub_operation.cpp  sum_operation.cpp  transpose_operation.cpp
src/optim/: CMakeLists.txt  optimizer.cpp  sgd.cpp
tests/: CMakeLists.txt  main.cpp  test_autograd.cpp  test_broadcast.cpp  test_cpu_kernels.cpp  test_cuda.cpp  test_factories_debug.cpp  test_kernel.cpp  test_math_ops.cpp  test_matmul.cpp  test_mean.cpp  test_memory.cpp  test_optim.cpp  test_tensor.cpp  test_thread_safety.cpp  test_utils.h  test_views.cpp
tests/cpu/: main_cpu.cpp  run_cpu_tests.cpp  test_cpu_kernel_impl.cpp  test_cpu_memory.cpp
tests/cross/: main_cross.cpp  test_device_transfer.cpp
tests/cuda/: main_cuda.cpp  run_cuda_tests.cpp  test_cuda_concurrency.cpp  test_cuda_memory.cpp  test_cuda_regressions.cpp  test_cuda_streams.cpp
tests/shared/: test_shared_broadcast.h  test_shared_factories.h  test_shared_ops_backward.h  test_shared_ops_forward.h  test_shared_tensor.h  test_shared_thread_safety.h  test_shared_views.h
tests/utils/: test_utils.h
